courses/airtribe/Events/Docker & Kubernetes/k8s-learning/09-full-stack/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: javaapp
  labels:
    app: javaapp
