courses/airtribe/Events/Docker & Kubernetes/k8s-learning/09-full-stack/07-java-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-api-service
  namespace: javaapp
spec:
  type: ClusterIP    # Ingress routes to this
  selector:
    app: java-api
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-api
  namespace: javaapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: java-api
    spec:
      containers:
        - name: java-api
          image: java-compose-api:1.0.0
          imagePullPolicy: Never          # use locally loaded image

          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40      # Spring Boot takes longer than Node.js to start
            periodSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
